<resources>
    <string name="app_name">Multi Tasking</string>

    <string name="calendar">Calendar</string>
    <string name="calculator">Calculator</string>
    <string name="clock">Clock</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="title">StopWatch</string>
    <string name="starttime">00:00:00:000</string>
    <string name="lap">Lap</string>
    <string name="information">Information</string>
    <string name="battery_usage">Battery usage</string>
    <string name="History">History</string>
    <string name="dialer">Dialer</string>
    <string name="contacts">Contacts</string>
    <string name="sensors">Sensors</string>
    <string name="battry_log">Battry log</string>
    <string name="call_log">CALL LOG</string>
    <string name="accessory">Accessory</string>
    <string name="alarm">Alarm</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="world_clock">World Clock</string>
    <string name="proximity">Proximity</string>
    <string name="sound">Sound</string>
    <string name="light">Light</string>
    <string name="add">ADD</string>
    <string name="minutes">Minutes</string>
    <string name="start_timer">Start</string>
    <string name="reset_timer">Reset</string>
    <string name="add_wClock">ADD</string>
    <string name="calllog_date">Date</string>
    <string name="calllog_name">Name</string>
    <string name="calllog_number">number</string>
    <string name="calllog_type">Type</string>
    <string name="calllog_time">Time</string>
    <string name="history_title">Call log history</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="c">C</string>
    <string name="default_screen">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="backSpace">BackSpace</string>
    <string name="cancel_timer">Cancel</string>
    <string name="Seconds">Enter Seconds</string>
    <string name="d_1">1</string>
    <string name="d_2">2</string>
    <string name="d_3">3</string>
    <string name="d_call">Call</string>
    <string name="d_0">0</string>
    <string name="d_clear">Clear</string>
    <string name="d_9">9</string>
    <string name="d_8">8</string>
    <string name="d_7">7</string>
    <string name="d_6">6</string>
    <string name="d_5">5</string>
    <string name="d_4">4</string>
    <string name="d_star">*</string>
    <string name="d_hash">#</string>
    <string name="contact_name">User name</string>
    <string name="contact_phone_no">Phone no.</string>
    <string name="contact_search">Search..</string>
    <string name="status">Status</string>
    <string name="bimage">bImage</string>
    <string name="level">Level</string>
    <string name="battery_voltage">Battery Voltage:</string>
    <string name="battery_temperature">Battery Temperature:</string>
    <string name="technology">Technology:</string>
    <string name="bstatus">Status:</string>
    <string name="health">Health:</string>
    <string name="btnexit">Exit</string>
    <string name="iconsmall">Icon Small</string>
    <string name="scale">Scale</string>
    <string name="present">Present</string>
    <string name="plugged">plugged</string>
    <string name="bettery">bettery</string>
    <string name="plug_type">Plug Type</string>
    <string name="xCordinate">TextView</string>
    <string name="yCordinate">TextView</string>
    <string name="zCordinate">TextView</string>
    <string name="stopped">Stopped</string>
    <string name="setalarm">Did you set the alarm?</string>
    <string name="alarm_on">Alarm on</string>
    <string name="alarm_off">Alarm off</string>
    <string name="action_settings">action_settings</string>
    <string name="torch">torch</string>
    <string name="click_this_button">Click this button!!!!</string>
    <string name="torch_button">torch_button</string>
    <string name="accelerometer">accelerometer</string>
    <string name="calllog">Call Log</string>
    <string name="sensorss">Sensors</string>
    <string name="battery">Battery</string>
    <string name="accessories">Accessory</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="multitasking">Multitasking</string>
    <string name="mainactivity">MainActivity</string>
    <string name="launcher">Launcher</string>
    <string name="contacts_info">Contacts</string>
    <string name="welcome">Welcome</string>

</resources>
