<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calllayout"
    xmlns:android="http://schemas.android.com/apk/res/android">
            <!--android:background="#222233"-->
            <!--android:textColor="#AACCFF"-->
            <TextView
                android:text="@string/calllog_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:gravity="center"
                android:background="#b2b2b2"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/imageView"
                android:layout_below="@id/date"
                android:layout_centerVertical="true"/>

            <TextView
                android:text="@string/calllog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_below="@id/imageView"
                />

            <TextView
                android:text="@string/calllog_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:id="@+id/number" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/number"
                android:id="@+id/linear">

                <TextView
                    android:text="@string/calllog_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type"
                    android:textStyle="italic"
                    android:layout_weight="0.8"

                    />

                <TextView
                    android:text="@string/calllog_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    android:layout_weight="0.2"
                    android:textStyle="normal"
                    />
            </LinearLayout>

</RelativeLayout>
